# JazzArchitect

./: .gitignore  CLAUDE.md
cpp/: .gitignore  CMakeLists.txt
cpp/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
cpp/Source/Core/: AudioEngine.cpp  AudioEngine.h  ChordQuality.h  ChordSymbol.cpp  ChordSymbol.h  PitchClass.h
cpp/Source/Grammar/: Generator.cpp  Generator.h  GrammarRule.h  NonTerminal.h  PCFG.cpp  PCFG.h
cpp/Source/MIDI/: MIDIExporter.h  MIDIImporter.h  MIDIOutput.cpp
cpp/Source/Style/: StyleEngine.cpp  StyleEngine.h  StylePresets.h  StyleVector.cpp  StyleVector.h
cpp/Source/Substitution/: BackdoorSubstitution.h  ColtraneSubstitution.h  SubstitutionEngine.h  TritoneSubstitution.h
cpp/Source/Synthesis/: ChordSynth.cpp  ChordSynth.h
cpp/Source/UI/: StaffNotation.h
cpp/Source/VoiceLeading/: GuideTone.cpp  GuideTone.h  VoiceLeadingOptimizer.h
files/: DEVELOPMENT_ROADMAP.md  FINAL_REPORT.md  JazzArchitect_Paper.md  JazzArchitect_Paper_en.md  JazzArchitect_Paper_ja.md  JazzArchitect_Paper_zh-TW.md  JazzBassline_Research.md  phase1_theoretical_foundations.md  phase2_corpus_analysis.md  phase3_rule_system_design.md  phase4_validation.md
scripts/: image_to_midi.py
src/: __init__.py  main.py
src/core/: __init__.py  chord.py  pitch.py
src/evaluation/: __init__.py  musdr.py
src/grammar/: __init__.py  generator.py  jht_parser.py  rules.py
src/style/: __init__.py  engine.py  presets.py  vectors.py
src/substitution/: __init__.py  backdoor.py  coltrane.py  tritone.py
src/voiceleading/: __init__.py  guidetone.py
tests/: __init__.py  test_core.py  test_integration.py
